crates/core/tests/snapshots/un_webpack_interop_rule__direct_require_n_getter_used_as_value_not_inlined.snap
---
source: crates/core/tests/un_webpack_interop_rule.rs
expression: output
---
import _lib from "./lib";
const _lib2 = require.n(_lib);
const ref = _lib2;
