crates/core/tests/snapshots/un_webpack_interop_rule__getter_used_as_value_not_inlined.snap
---
source: crates/core/tests/un_webpack_interop_rule.rs
expression: output
---
var _lib = require("./lib");
var _lib2 = ()=>_lib && _lib.__esModule ? _lib.default : _lib;
var ref = _lib2;
