crates/core/tests/snapshots/un_webpack_interop_rule__no_require_bindings_noop.snap
---
source: crates/core/tests/un_webpack_interop_rule.rs
expression: output
---
var _lib = import("./lib");
var _lib2 = ()=>_lib && _lib.__esModule ? _lib.default : _lib;
console.log(_lib2());
