crates/core/tests/snapshots/un_webpack_interop_rule__non_require_base_not_matched.snap
---
source: crates/core/tests/un_webpack_interop_rule.rs
expression: output
---
var _lib = someOtherCall();
var _lib2 = ()=>_lib && _lib.__esModule ? _lib.default : _lib;
console.log(_lib2());
