crates/core/tests/snapshots/un_webpack_interop_rule__require_o_with_spread_arg_not_rewritten.snap
---
source: crates/core/tests/un_webpack_interop_rule.rs
expression: output
---
const ok = require.o(map, ...keys);
