crates/core/tests/snapshots/un_webpack_interop_rule__require_t_cached_namespace_with_later_cache_use_not_inlined.snap
---
source: crates/core/tests/un_webpack_interop_rule.rs
expression: output
---
let ns;
const react = require("./react");
let useId = (ns || (ns = require.t(react, 2))).useId;
console.log(ns);
