crates/core/tests/snapshots/un_webpack_interop_rule__require_t_dynamic_property_read_not_inlined.snap
---
source: crates/core/tests/un_webpack_interop_rule.rs
expression: output
---
const react = require("./react");
let useId = require.t(react, 2)[name];
