crates/core/tests/snapshots/un_webpack_interop_rule__require_t_non_mode_2_not_inlined.snap
---
source: crates/core/tests/un_webpack_interop_rule.rs
expression: output
---
const lib = require("./lib");
let value = require.t(lib, 19).default;
